--- a/index.html
+++ b/index.html
@@ -8,32 +8,32 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </head>
-<body class="h-screen justify-center items-center flex">
-    <div class="border-2 border-black p-8">
+<body class=" flex h-screen justify-center items-center">
+    <div class="border-2 border-black sm:max-h-5xl max-sm:w-6xl max-h-auto max-w-96 p-10 ms-10">
         <input type="text" class="w-full bg-gray-200 text-right p-4 mb-4 border border-gray-300 
-        rounded-md focus:outline-none" placeholder="0" id="input-field">
+        rounded-md focus:outline-none text-3xl font-xl" placeholder="0" id="input-field">
         <div class="grid grid-cols-4 gap-3">
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="clr()"> C </button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="handleclick('(')"> ( </button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="handleclick(')')"> ) </button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="handleclick('%')"> % </button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="handleclick(1)"> 1</button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="handleclick(2)"> 2 </button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="handleclick(3)"> 3 </button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="handleclick('/')"> / </button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="handleclick(4)"> 4</button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="handleclick(5)"> 5 </button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="handleclick(6)"> 6 </button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="handleclick('*')"> * </button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="handleclick(7)"> 7 </button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="handleclick(8)"> 8 </button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="handleclick(9)"> 9 </button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="handleclick('-')"> - </button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="handleclick(0)"> 0 </button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="handleclick('.')"> . </button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="solve()"> = </button>
-            <button class="bg-gray-300 text-black font-bold text-xl py-3 px-4" onclick="handleclick('+')"> + </button>
-        </
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="clr()"> C </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick('(')"> ( </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(')')"> ) </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick('%')"> % </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(1)"> 1</button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(2)"> 2 </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(3)"> 3 </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick('/')"> / </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(4)"> 4</button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(5)"> 5 </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(6)"> 6 </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick('*')"> * </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(7)"> 7 </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(8)"> 8 </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(9)"> 9 </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick('-')"> - </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(0)"> 0 </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick('.')"> . </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="solve()"> = </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick('+')"> + </button>
+        </div>
     </div>
 </body>
 </html>
