--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </head>
-<body class=" flex h-screen justify-center items-center">
-    <div class="border-2 border-black sm:max-h-full sm:max-w-full max-h-auto max-w-96 p-10 ms-10">
+<body class=" flex  mt-44 justify-center items-center">
+    <div class="border-2 border-black sm:max-h-fit sm:max-w-fit max-h-auto max-w-96 p-10 ms-10">
         <input type="text" class="w-full bg-gray-200 text-right p-4 mb-4 border border-gray-300 
         rounded-md focus:outline-none text-3xl font-xl" placeholder="0" id="input-field">
         <div class="grid grid-cols-4 gap-3">
