--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </head>
-<body class=" flex h-screen justify-center items-center p-7">
-    <div class="border-2 border-black p-8">
+<body class=" flex h-screen justify-center items-center p-7 mt-28">
+    <div class="border-2 border-black p-8 sm:h-6xl sm:w-full">
         <input type="text" class="w-full bg-gray-200 text-right p-4 mb-4 border border-gray-300 
         rounded-md focus:outline-none text-3xl font-xl" placeholder="0" id="input-field">
         <div class="grid grid-cols-4 gap-3">
