--- a/index.html
+++ b/index.html
@@ -8,31 +8,31 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </head>
-<body class=" flex h-screen justify-center items-center p-7 mt-28">
-    <div class="border-2 border-black p-8 sm:h-6xl sm:w-full">
+<body class=" flex h-screen justify-center items-center p-10">
+    <div class="border-2 border-black px-8 py-14 h-auto w-full">
         <input type="text" class="w-full bg-gray-200 text-right p-4 mb-4 border border-gray-300 
-        rounded-md focus:outline-none text-3xl font-xl" placeholder="0" id="input-field">
-        <div class="grid grid-cols-4 gap-3">
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="clr()"> C </button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick('(')"> ( </button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(')')"> ) </button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick('%')"> % </button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(1)"> 1</button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(2)"> 2 </button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(3)"> 3 </button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick('/')"> / </button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(4)"> 4</button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(5)"> 5 </button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(6)"> 6 </button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick('*')"> * </button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(7)"> 7 </button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(8)"> 8 </button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(9)"> 9 </button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick('-')"> - </button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick(0)"> 0 </button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick('.')"> . </button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="solve()"> = </button>
-            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4" onclick="handleclick('+')"> + </button>
+        rounded-md focus:outline-none text-3xl font-xl h-48" placeholder="0" id="input-field">
+        <div class="grid grid-cols-4 gap-1">
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 w-full h-full" onclick="clr()"> C </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="handleclick('(')"> ( </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="handleclick(')')"> ) </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="handleclick('%')"> % </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="handleclick(1)"> 1</button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="handleclick(2)"> 2 </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="handleclick(3)"> 3 </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="handleclick('/')"> / </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="handleclick(4)"> 4</button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="handleclick(5)"> 5 </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="handleclick(6)"> 6 </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="handleclick('*')"> * </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="handleclick(7)"> 7 </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="handleclick(8)"> 8 </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="handleclick(9)"> 9 </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="handleclick('-')"> - </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="handleclick(0)"> 0 </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="handleclick('.')"> . </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="solve()"> = </button>
+            <button class="bg-gray-300 text-black font-bold text-4xl py-3 px-4 md:w-full md:h-full" onclick="handleclick('+')"> + </button>
         </div>
     </div>
 </body>
